--- a/project/homepage/mycart.html
+++ b/project/homepage/mycart.html
@@ -1,7 +1,3 @@
-   
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +7,7 @@
 <link rel="stylesheet" href="./css/dropmenu.css" />
 <link rel="stylesheet" href="greenville.css">    
 <script src="./js/bikes.js"></script>
-<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>  
 <title>Your Cart</title>
 <title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
