--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -30,6 +30,7 @@
     </div>
 
     <div class="right-links">
+        <a href="home.html">Home</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
     </div>
@@ -429,6 +430,7 @@
 </div>
 </body>
 </html>
+
 
 
 
