--- a/project/homepage/mylicenselogs.html
+++ b/project/homepage/mylicenselogs.html
@@ -162,8 +162,8 @@
 <section class="sales">
 <div class="cta" id="contact">
     <h2>Talk to Sales</h2>
-    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span>
-    <a href="contact.html">Contact Sales</a><BR>
+    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span><BR>
+    <a href="contacts.html">Contact Sales</a><BR>
 </div>
 </section>
 <footer>
