--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -37,7 +37,7 @@
 
 <body>
 
-<div class="container">
+<div class="container2">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -65,8 +65,6 @@
     <h1>Greenville Enterprise Software</h1>
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
-
-<div class="container py-4">
 
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2>Products</h2>
