--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -12,7 +12,7 @@
 </style>
 </head>
 <body>
-<div class="container">
+<div class="gacontainer">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -31,6 +31,7 @@
     </div>
 
     <div class="right-links">
+        <a href="home.html">Login</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
     </div>
@@ -90,7 +91,7 @@
     <a href="contacts.html">Contact Sales</a>
 </div>
 </section>
-<footer><div align="center">© 2026 Greenville Associates Enterprise Software. All rights reserved.</footer>
+<div align="center" class="footer">© 2026 Greenville Associates Enterprise Software. All rights reserved.</div>
 </div>
 </body>
 </html>
