--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -8,11 +8,58 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">    
 <title>Greenville Associates Enterprise Software | Welcome</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
+    /* Ensure full‑screen layout */
+    html, body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    /* Remove any container restrictions */
+    .gacontainer {
+        width: 100%;
+        max-width: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    /* Make middle columns stretch full width */
+    .middle-columns {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        padding: 20px;
+        box-sizing: border-box;
+    }
+
+    .mid-col {
+        width: 32%;
+    }
+
+    header {
+        text-align: center;
+        padding: 20px;
+    }
+
+    .sales {
+        width: 100%;
+        padding: 20px;
+        text-align: center;
+    }
+
+    .footer {
+        width: 100%;
+        padding: 20px;
+        text-align: center;
+    }
 </style>
 </head>
+
 <body>
-<div class="gacontainer">
+
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -43,20 +90,16 @@
 </header>
 
 <div>
-
-<span><p>Welcome to Greenville Associates Enterprise Licensing Site!</p></span>
- 
+    <BR><BR><span><H3>Welcome to Greenville Associates Enterprise Licensing Site!</H3></span><BR><BR>
 </div>
 
-</div>
 <section class="middle-columns">
 
-    <!-- CENTER COLUMN: MIAMI IMAGES -->
     <div class="mid-col">
         <img src="./images/miami1.jpg" style="width:48%; border-radius:5px;">
         <img src="./images/miami3.jpg" style="width:48%; border-radius:5px;">
     </div>
-    <!-- LEFT COLUMN: QUICK LINKS -->
+
     <div class="mid-col">
         <h3>Quick Links</h3>
         <hr>
@@ -69,7 +112,7 @@
             <li><a href="https://gamecocksonline.com/sports/mbball/cumestats/">Team Stats</a></li>
         </ul>
     </div>
-    <!-- RIGHT COLUMN: SITEMAP TABLE -->
+
     <div class="mid-col">
         <h3>Site Map</h3>
         <hr>
@@ -84,15 +127,18 @@
     </div>
 
 </section>
+
 <section class="sales">
-<div class="cta" id="contact">
-    <h2>Talk to Sales</h2>
-    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span><BR>
-    <a href="contacts.html">Contact Sales</a>
-</div>
+    <div class="cta" id="contact">
+        <h2>Talk to Sales</h2>
+        <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span><br>
+        <a href="contacts.html">Contact Sales</a>
+    </div>
 </section>
-<div align="center" class="footer">© 2026 Greenville Associates Enterprise Software. All rights reserved.</div>
-</div>
+
+<div class="footer">© 2026 Greenville Associates Enterprise Software. All rights reserved.</div>
+
 </body>
 </html>
+
 
