--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="login.css" />
-  <link rel="stylesheet" href="dropmenu.css" />
+  <link rel="stylesheet" href="./css/login.css" />
+  <link rel="stylesheet" href="./css/dropmenu.css" />
   <script src="./js/bikes.js"></script>
   <title>Mountain Bike Parks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
