--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -46,12 +46,17 @@ font-size: 12pt;
             <div class="dropdown">
                   <button class="jsmenu"><img src="./images/jsmenu4.png"></button> 
                   <div class="dropdown-content">
-                  <a href="index.html">Site Home</a>
-                  <a href="cartreview.html">MyCart</a>
-                  <a href="parks5.html">Review Park Options</a>
-                  <a href="parksreview5.html">Park Reviews</a>
-                  <a href="mybookings5.html">MyReservations</a>
-                  <a href="manager.html">Manager Utilities</a>
+                  <a href="login.html">Login</a>
+            <a href="logout.html">Logout</a>
+            <a href="welcome.html">Welcome</a>
+            <a href="licenses6.html">BuyNow</a>
+            <a href="products.html">AdminProducts</a>
+            <a href="licensetypes.html">LicenseTypes</a>
+            <a href="mylicenselogs.html">LicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="mycart.html">MyCart</a>
+            <a href="reviews.html">AllReviews</a>
+            <a href="Help.html">Help</a>
              </div>
     </div> 
       <div class="logo">&nbsp&nbsp<H5>MyLinkv25 - Review Parks</H5></div>
