--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -90,9 +90,10 @@
 </header>
 
 <div>
-    <BR><BR><span><H3>Welcome to Greenville Associates Enterprise Licensing Site!</H3></span><BR><BR>
+    <BR><BR><div align="center"><span><H3>Welcome to Greenville Associates Enterprise Licensing Site!</H3></span></div><BR><BR>
 </div>
 
+<div class="container2">
 <section class="middle-columns">
 
     <div class="mid-col">
@@ -135,9 +136,9 @@
         <a href="contacts.html">Contact Sales</a>
     </div>
 </section>
-
+<BR>
 <div class="footer">© 2026 Greenville Associates Enterprise Software. All rights reserved.</div>
-
+</div>
 </body>
 </html>
 
