--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -68,7 +68,7 @@
 </header>
 
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <h2>Products</h2>
+        <h2>Product Administrator</h2>
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
             Add Product
         </button>
