--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -45,7 +45,8 @@
             <a href="login.html">Login</a>
             <a href="logout.html">Logout</a>
             <a href="welcome.html">Welcome</a>
-            <a href="products.html">All Products</a>
+            <a href="licenses6.html">BuyNow</a>
+            <a href="products.html">ProductAdministrator</a>
             <a href="licensetypes.html">LicenseTypes</a>
             <a href="mylicenselogs.html">LicenseLogs</a>
             <a href="mylicenses.html">MyLicenses</a>
@@ -56,7 +57,7 @@
     </div>
 
     <div class="right-links">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
     </div>
