--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -88,7 +88,7 @@ font-size: 12pt;
   <script>
   $(document).ready(function () {
     $.ajax({
-      url: "https://parksapi-h8btdjefb3gpdxaf.westus3-01.azurewebsites.net/api/Parks",
+      url: "https://api242.onrender.com/parks",
       method: "GET",
       success: function (parks) {
         console.log("✅ Parks data retrieved:", parks);
