--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -80,7 +80,8 @@
 
         <p id="error"></p>
     </div>
-<section class="middle-columns">
+<div class="container2">
+    <section class="middle-columns">
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
     <div class="mid-col">
@@ -122,7 +123,7 @@
     <a href="contacts.html">Contact Sales</a>
 </div>
 </section>
-<footer align="center" class="footer">&copy2026 - Greenville Associates Consulting</footer>
+
 </div>
     
         
@@ -164,5 +165,5 @@
         });
     </script>
 </body>
-
+<footer align="center" class="footer">&copy2026 - Greenville Associates Consulting</footer>
 </html>
