--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -286,11 +286,11 @@ loadLicenses();
 <section class="sales">
 <div class="cta" id="contact">
     <h2>Talk to Sales</h2>
-    <p>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</p>
+    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span><BR>
     <a href="contacts.html">Contact Sales</a>
 </div>
 </section>
-<footer>
+<footer class="footer" style="text-align: center;">
     © 2026 Greenville Associates Enterprise Software. All rights reserved.
 </footer>
 </div>
