--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -70,6 +70,7 @@ font-size: 12pt;
                 <a href="cartreview.html" id="cartBtn3"><img src="./images/cart4.png" width="40px" height="40px"></a>
       </div>
     </div>
+<div class="container2">
 <div align="center" id="banner"><span id="userGreeting">Welcome Guest</span></div>
 <div class="container py-5">
 <div class="mb-3">
@@ -81,7 +82,7 @@ font-size: 12pt;
 
 <div id="parks-container" class="row g-4"></div>
   </div>
-
+</div>
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
