--- a/project/homepage/reviews5.html
+++ b/project/homepage/reviews5.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Park Reviews</title>
 
-  <link rel="stylesheet" href="login.css" />
-  <link rel="stylesheet" href="dropmenu.css" />
+  <link rel="stylesheet" href="./css/login.css" />
+  <link rel="stylesheet" href="./css/dropmenu.css" />
   <script src="./js/bikes.js"></script>
 
   <!-- Bootstrap CSS -->
@@ -58,6 +58,7 @@
     <div class="nav-right">
       <img src="./images/bluecircle.png" id="profilephototarget" alt="User" style="cursor:pointer;" onclick="window.location.href='profile.html'" />
       <span id="H3UserBanner"></span>
+      <a href="index.html" id="homeBtn" class="btn secondary-btn">Home</a>
       <a href="login.html" id="loginBtn" class="btn secondary-btn" onclick="loginUser(event)">Login</a>
       <a href="login.html" id="logoutBtn" class="btn secondary-btn" onclick="logoutUser(event)">Logout</a>
               <a href="cartreview.html" id="cartBtn3"><img src="./images/cart4.png" width="40px" height="40px"></a>
