--- a/project/homepage/cartmaster.html
+++ b/project/homepage/cartmaster.html
@@ -4,8 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="login.css" />
-  <link rel="stylesheet" href="dropmenu.css" />
+  <link rel="stylesheet" href="./css/login.css" />
+  <link rel="stylesheet" href="./css/dropmenu.css" />
+  <link rel="stylesheet" href="site.css"> 
+<link rel="stylesheet" href="layout.css"> 
+<link rel="stylesheet" href="greenville.css"> 
   <script src="./js/bikes.js"></script>
   <title>Parks - User Master Summary</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
