--- a/project/homepage/contacts.html
+++ b/project/homepage/contacts.html
@@ -30,8 +30,8 @@
             font-weight: bold;
         }
         .container {
-            max-width: 700px;
-            margin-top: 40px;
+            max-width: 90%;
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -55,6 +55,7 @@
     </div>
 
     <div class="right-links">
+          <a href="index.html">Home</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
     </div>
