--- a/project/homepage/reviews.html
+++ b/project/homepage/reviews.html
@@ -13,7 +13,6 @@
     </style>
 </head>
 <body>
-<div class="container">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -32,6 +31,7 @@
     </div>
 
     <div class="right-links">
+        <a href="index.html">Home</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
     </div>
@@ -39,7 +39,7 @@
 
 <header>
     <h1>Greenville Enterprise Software</h1>
-    <p>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</p>
+    <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 </head>
 <body class="bg-light">
@@ -314,6 +314,7 @@ loadReviews();
     <a href="contacts.html">Contact Sales</a>
 </div>
 </section>
+</div>
 <div class="footer"> © 2026 Greenville Associates Enterprise Software. All rights reserved.</footer>
 </div>
 </body>
