--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -65,22 +65,19 @@
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 
-
-
+<div class="container2">
     <div class="login-box">
             <form id="loginForm">
-            <label>Email:</label><br>
-            <input type="text" id="email" required><br><br>
+            <label>Email:</label><input type="text" id="email" required><br><br>
 
-            <label>Password:</label><br>
-            <input type="password" id="password" required><br><br>
+            <label>Password:</label><input type="password" id="password" required><br><br>
 
-            <button type="submit">Login</button>
+            <button type="submit" style="width: 100%; text-align: center;">Login</button>
         </form>
 
         <p id="error"></p>
     </div>
-<div class="container2">
+
     <section class="middle-columns">
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
