--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -120,7 +120,7 @@
     <a href="contacts.html">Contact Sales</a>
 </div>
 </section>
-
+<div align="center" class="footer">&copy2026 - Greenville Associates Consulting</div>
 </div>
     
         
@@ -162,5 +162,5 @@
         });
     </script>
 </body>
-<footer align="center" class="footer">&copy2026 - Greenville Associates Consulting</footer>
+
 </html>
