--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -15,7 +15,7 @@
         }
         .login-box {
             position: relative;
-            width: 700px;
+            width: 500px;
             height: 500px;
             padding: 20px;
             border: 1px solid #ccc;
@@ -66,9 +66,9 @@
 </header>
     <div class="login-box">
             <form id="loginForm">
-            <label>Email:</label>&nbsp&nbsp&nbsp<input type="text" id="email" required><br><br>
+            <label>Email:</label>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="text" id="email" required><br><br>
 
-            <label>Password:</label>&nbsp&nbsp&nbsp<input type="password" id="password" required><br><br>
+            <label>Password:</label>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="password" id="password" required><br><br>
 
             <button type="submit" style="width: 100%; text-align: center;">Login</button>
         </form>
