--- a/project/homepage/reviews.html
+++ b/project/homepage/reviews.html
@@ -315,7 +315,7 @@ loadReviews();
 </div>
 </section>
 </div>
-<div class="footer"> © 2026 Greenville Associates Enterprise Software. All rights reserved.</footer>
+<div class="footer"> © 2026 Greenville Associates Enterprise Software. All rights reserved.</div>
 </div>
 </body>
 </html>
