--- a/project/homepage/mylicenselogs.html
+++ b/project/homepage/mylicenselogs.html
@@ -53,7 +53,7 @@
 </header>
 
 
-<div class="container py-4">
+<div class="container py-8" style="margin-top: 40px";>
   <h2 class="mb-4">License Logs</h2>
 
   <table class="table table-striped table-bordered" id="logsTable">
