--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="right-links">
-        <a href="home.html">Login</a>
+        <a href="index.html">Home</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
     </div>
