--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -31,7 +31,9 @@
     </div>
 
     <div class="right-links">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
+        <a href="userhelp.html">UserHelp</a>
+        <a href="usernotices.html">UserNotices</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
     </div>
@@ -431,6 +433,7 @@
 </div>
 </body>
 </html>
+
 
 
 
