--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -20,7 +20,7 @@
             padding: 20px;
             border: 1px solid #ccc;
             margin: 0 auto;
-            border: 2px solid black;
+            border: 2px solid darkgreen;
             margin-top: 30px;
             margin-bottom: 100px;
         }
@@ -33,6 +33,8 @@
         position: relative;
         margin-top: 20px;
         }
+
+        .toparea{width: 100%; border: 2px solid lightgrey;}
     </style>
 </head>
 <body>
@@ -65,6 +67,7 @@
     <h1>Greenville Enterprise Software</h1>
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
+    <section class="toparea">
     <div class="login-box">
             <img src="UserIcon.png" width="200px" height="200px">
             <form id="loginForm">
@@ -77,6 +80,7 @@
 
         <p id="error"></p>
     </div>
+    </section>
 <div class="container2">
 
 
