--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -69,7 +69,7 @@
 </header>
     <section class="toparea">
     <div class="login-box">
-            <img src="UserIcon.png" width="200px" height="200px">
+            <div align="center"><img src="./images/UserIcon.png" width="200px" height="200px"></div>
             <form id="loginForm">
             <label>Email:</label>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="text" id="email" required><br><br>
 
