--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -41,6 +41,9 @@
                 margin-bottom: 10px;
                 border-radius: 15px;
                 }
+
+        .loginform
+                { text-align: center;}
     </style>
 </head>
 <body>
@@ -77,9 +80,9 @@
     <div class="login-box">
             <div align="center"><img src="./images/UserIcon.png" width="200px" height="200px"></div>
             <form id="loginForm">
-            <label>Email:</label>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="text" id="email" required><br><br>
+            <span class="loginform"><label>Email:</label>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="text" id="email" required><br><br></span>
 
-            <label>Password:</label>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="password" id="password" required><br><br>
+            <span class="loginform"><label>Password:</label>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="password" id="password" required><br><br></span>
 
             <button type="submit" style="width: 100%; text-align: center;">Login</button>
         </form>
