--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -37,7 +37,7 @@
 
 <body>
 
-<div class="container2">
+<div class="container">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -58,6 +58,8 @@
 
     <div class="right-links">
         <a href="index.html">Home</a>
+        <a href="userhelp.html">UserHelp</a>
+        <a href="usernotices.html">UserNotices</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
     </div>
