--- a/project/homepage/mycart.html
+++ b/project/homepage/mycart.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="./css/login.css"> 
+<link rel="stylesheet" href="./css/dropmenu.css" />
 <link rel="stylesheet" href="site.css"> 
 <link rel="stylesheet" href="layout.css"> 
-<link rel="stylesheet" href="./css/dropmenu.css" />
 <link rel="stylesheet" href="greenville.css">    
 <script src="./js/bikes.js"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>  
 <title>Your Cart</title>
 <title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
@@ -245,7 +246,7 @@ width: 400px;
 
 </section> 
 </div>
-<div class="footer"> &copy; Greenville Associates Consulting, Inc <br> All rights reserved.<br>  <span align="center"><a href="sitemap.html" class="sitelink">SiteMap</a></span></div>
-</body>
 
+</body>
+<footer class="footer"> &copy; Greenville Associates Consulting, Inc <br> All rights reserved.<br>  <span align="center"><a href="sitemap.html" class="sitelink">SiteMap</a></span></footer>
 </html>
