--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -2,18 +2,74 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="site.css"> 
-<link rel="stylesheet" href="layout.css"> 
-<link rel="stylesheet" href="greenville.css">    
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">    
+<link rel="stylesheet" href="site.css">
+<link rel="stylesheet" href="layout.css">
+<link rel="stylesheet" href="greenville.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <title>Greenville Associates Enterprise Software | Welcome</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
-    #threeheader{margin-left:50px;}
+    /* HERO SECTION */
+    .hero {
+        background: #0a2f1f;
+        color: white;
+        padding: 80px 20px;
+        text-align: center;
+    }
+
+    .hero h2 {
+        margin: 0;
+        font-size: 2.2rem;
+    }
+
+    .hero p {
+        margin-top: 15px;
+        font-size: 1.2rem;
+        color: #d1e7d9;
+    }
+
+    /* THREE-COLUMN SECTION */
+    .welcome-columns {
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+        width: 85%;
+        margin: 40px auto;
+    }
+
+    .welcome-card {
+        flex: 1;
+        background: #ffffff;
+        border: 1px solid #d1e7d9;
+        border-radius: 6px;
+        padding: 25px;
+    }
+
+    .welcome-images img {
+        width: 48%;
+        border-radius: 5px;
+    }
+
+    .sitemap-table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+
+    .sitemap-table th,
+    .sitemap-table td {
+        padding: 8px;
+        border-bottom: 1px solid #d1e7d9;
+        text-align: left;
+    }
 </style>
 </head>
+
 <body>
 
+<div class="container">
+
+<!-- TOP NAV -->
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -39,24 +95,29 @@
     </div>
 </div>
 
+<!-- HEADER -->
 <header>
     <h1>Greenville Enterprise Software</h1>
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 
-<div align="center" style="height: 500px">
-    <BR><BR><span><H3 id="threeheader">Welcome to Greenville Associates Enterprise Licensing Site!</H3></span><BR><BR>
-</div>
+<!-- HERO SECTION -->
+<section class="hero">
+    <h2>Welcome to Greenville Associates Enterprise Licensing</h2>
+    <p>Your central hub for software licensing, product access, and enterprise resources.</p>
+</section>
 
-<div class="container2">
-<section class="middle-columns">
+<!-- THREE COLUMN SECTION -->
+<section class="welcome-columns">
 
-    <div class="mid-col">
-        <img src="./images/miami1.jpg" style="width:48%; border-radius:5px;">
-        <img src="./images/miami3.jpg" style="width:48%; border-radius:5px;">
+    <!-- IMAGES -->
+    <div class="welcome-card welcome-images">
+        <img src="./images/miami1.jpg">
+        <img src="./images/miami3.jpg">
     </div>
 
-    <div class="mid-col">
+    <!-- QUICK LINKS -->
+    <div class="welcome-card">
         <h3>Quick Links</h3>
         <hr>
         <ul class="quick-links">
@@ -69,7 +130,8 @@
         </ul>
     </div>
 
-    <div class="mid-col">
+    <!-- SITE MAP -->
+    <div class="welcome-card">
         <h3>Site Map</h3>
         <hr>
         <table class="sitemap-table">
@@ -84,6 +146,7 @@
 
 </section>
 
+<!-- SALES CTA -->
 <section class="sales">
     <div class="cta" id="contact">
         <h2>Talk to Sales</h2>
@@ -91,10 +154,12 @@
         <a href="contacts.html">Contact Sales</a>
     </div>
 </section>
-<BR>
-<div class="footer">© 2026 Greenville Associates Enterprise Software. All rights reserved.</div>
+
+<!-- FOOTER -->
+<footer>
+    © 2026 Greenville Associates Enterprise Software. All rights reserved.
+</footer>
+
 </div>
 </body>
 </html>
-
-
