--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -2,51 +2,107 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="site.css"> 
-<link rel="stylesheet" href="layout.css"> 
-<link rel="stylesheet" href="greenville.css">    
-<title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
+<link rel="stylesheet" href="site.css">
+<link rel="stylesheet" href="layout.css">
+<link rel="stylesheet" href="greenville.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<title>Greenville Associates Enterprise Software | Login</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            width: 100%;
-        }
-        .login-box {
-            position: relative;
-            width: 700px;
-            height: 400px;
-            padding: 20px;
-            border: 1px solid #ccc;
-            margin: 0 auto;
-            border: 2px solid darkgreen;
-            margin-top: 30px;
-            margin-bottom: 100px;
-        }
-        #error {
-            color: red;
-            margin-top: 10px;
-        }
-        footer
-        {
-        position: relative;
-        margin-top: 20px;
-        }
 
-        .toparea{
-                width: 100%; 
-                border: 2px solid lightgrey; 
-                margin-top: 10px; 
-                margin-bottom: 10px;
-                border-radius: 15px;
-                }
+<style>
+    /* LOGIN CARD */
+    .login-container {
+        width: 100%;
+        max-width: 450px;
+        margin: 60px auto;
+        background: #ffffff;
+        border: 1px solid #d1e7d9;
+        border-radius: 8px;
+        padding: 35px;
+        text-align: center;
+    }
 
-        .loginform
-                { text-align: center;}
-    </style>
+    .login-container img {
+        width: 140px;
+        margin-bottom: 20px;
+    }
+
+    .login-container label {
+        font-weight: bold;
+        color: #0a2f1f;
+        display: block;
+        text-align: left;
+        margin-bottom: 6px;
+    }
+
+    .login-container input {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 18px;
+        border: 1px solid #bcd5c8;
+        border-radius: 4px;
+    }
+
+    .login-container button {
+        width: 100%;
+        padding: 12px;
+        background: #0a2f1f;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+
+    .login-container button:hover {
+        background: #145c3c;
+    }
+
+    #error {
+        color: red;
+        margin-top: 10px;
+        font-weight: bold;
+    }
+
+    /* THREE-COLUMN SECTION MATCHING HOMEPAGE */
+    .welcome-columns {
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+        width: 85%;
+        margin: 40px auto;
+    }
+
+    .welcome-card {
+        flex: 1;
+        background: #ffffff;
+        border: 1px solid #d1e7d9;
+        border-radius: 6px;
+        padding: 25px;
+    }
+
+    .welcome-images img {
+        width: 48%;
+        border-radius: 5px;
+    }
+
+    .sitemap-table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+
+    .sitemap-table th,
+    .sitemap-table td {
+        padding: 8px;
+        border-bottom: 1px solid #d1e7d9;
+        text-align: left;
+    }
+</style>
 </head>
+
 <body>
+
+<!-- TOP NAV -->
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -72,36 +128,40 @@
     </div>
 </div>
 
+<!-- HEADER -->
 <header>
     <h1>Greenville Enterprise Software</h1>
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
-    <section class="toparea">
-    <div class="login-box">
-            <div align="center"><img src="./images/UserIcon.png" width="200px" height="200px"></div>
-            <form id="loginForm">
-            <span class="loginform"><label>Email:</label>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="text" id="email" required><br><br></span>
 
-            <span class="loginform"><label>Password:</label>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="password" id="password" required><br><br></span>
+<!-- LOGIN CARD -->
+<section>
+    <div class="login-container">
+        <img src="./images/UserIcon.png" alt="User Icon">
 
-            <button type="submit" style="width: 100%; text-align: center;">Login</button>
+        <form id="loginForm">
+            <label for="email">Email</label>
+            <input type="text" id="email" required>
+
+            <label for="password">Password</label>
+            <input type="password" id="password" required>
+
+            <button type="submit">Login</button>
         </form>
 
         <p id="error"></p>
     </div>
-    </section>
-<div class="container2">
+</section>
 
+<!-- THREE-COLUMN SECTION (same as homepage/welcome) -->
+<section class="welcome-columns">
 
-    <section class="middle-columns">
-
-    <!-- CENTER COLUMN: MIAMI IMAGES -->
-    <div class="mid-col">
-        <img src="./images/miami1.jpg" style="width:48%; border-radius:5px;">
-        <img src="./images/miami3.jpg" style="width:48%; border-radius:5px;">
+    <div class="welcome-card welcome-images">
+        <img src="./images/miami1.jpg">
+        <img src="./images/miami3.jpg">
     </div>
-    <!-- LEFT COLUMN: QUICK LINKS -->
-    <div class="mid-col">
+
+    <div class="welcome-card">
         <h3>Quick Links</h3>
         <hr>
         <ul class="quick-links">
@@ -113,8 +173,8 @@
             <li><a href="https://gamecocksonline.com/sports/mbball/cumestats/">Team Stats</a></li>
         </ul>
     </div>
-    <!-- RIGHT COLUMN: SITEMAP TABLE -->
-    <div class="mid-col">
+
+    <div class="welcome-card">
         <h3>Site Map</h3>
         <hr>
         <table class="sitemap-table">
@@ -128,54 +188,52 @@
     </div>
 
 </section>
+
+<!-- SALES CTA -->
 <section class="sales">
-<div class="cta" id="contact">
-    <h2>Talk to Sales</h2>
-    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span><BR>
-    <a href="contacts.html">Contact Sales</a>
-</div>
+    <div class="cta" id="contact">
+        <h2>Talk to Sales</h2>
+        <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span><br>
+        <a href="contacts.html">Contact Sales</a>
+    </div>
 </section>
-<div align="center" class="footer">&copy2026 - Greenville Associates Consulting</div>
-</div>
-    
-        
-    <script>
-        document.getElementById("loginForm").addEventListener("submit", async (e) => {
-            e.preventDefault();
 
-            const email = document.getElementById("email").value.trim();
-            const password = document.getElementById("password").value.trim();
-            const errorBox = document.getElementById("error");
+<!-- FOOTER -->
+<footer>
+    © 2026 Greenville Associates Enterprise Software. All rights reserved.
+</footer>
 
-            try {
-                const response = await fetch("https://api242.onrender.com/users");
-                const users = await response.json();
+<script>
+document.getElementById("loginForm").addEventListener("submit", async (e) => {
+    e.preventDefault();
 
-                // Match email + plainpassword
-                const user = users.find(
-                    u => u.email === email && u.plainpassword === password
-                );
+    const email = document.getElementById("email").value.trim();
+    const password = document.getElementById("password").value.trim();
+    const errorBox = document.getElementById("error");
 
-                if (user) {
-                    // Store specific fields
-                    localStorage.setItem("userId", user._id);
-                    localStorage.setItem("email", user.email);
+    try {
+        const response = await fetch("https://api242.onrender.com/users");
+        const users = await response.json();
 
-                    // Optional: store full user object
-                    localStorage.setItem("loggedInUser", JSON.stringify(user));
+        const user = users.find(
+            u => u.email === email && u.plainpassword === password
+        );
 
-                    // Redirect to licenses.html
-                    window.location.href = "mylicenses.html";
-                } else {
-                    errorBox.textContent = "Invalid username or password.";
-                }
+        if (user) {
+            localStorage.setItem("userId", user._id);
+            localStorage.setItem("email", user.email);
+            localStorage.setItem("loggedInUser", JSON.stringify(user));
+            window.location.href = "mylicenses.html";
+        } else {
+            errorBox.textContent = "Invalid username or password.";
+        }
 
-            } catch (err) {
-                console.error(err);
-                errorBox.textContent = "Error connecting to server.";
-            }
-        });
-    </script>
+    } catch (err) {
+        console.error(err);
+        errorBox.textContent = "Error connecting to server.";
+    }
+});
+</script>
+
 </body>
-
 </html>
